[package]
name = "plygui-curses"
version = "0.0.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
edition = "2018"

[lib]
name = "plygui_curses"
path = "src/lib.rs"

[[bin]]
name = "uitest"
path = "src/main.rs"

[dependencies]
plygui-api = {version = "0.0.1", path = "../plygui/api"}
lazy_static = {version = "~1.4"}
libc = {version = "~0.2"}
pancurses = "0.17"
